--- a/.github/workflows/solar-system.yml
+++ b/.github/workflows/solar-system.yml
@@ -13,15 +13,22 @@ env:
 jobs:
     unit-testing:
         name: Unit Testing
-        runs-on: ubuntu-latest
+        strategy:
+            matrix:
+                nodejs_version: [18, 19, 20]
+                operating_system: [ubuntu-latest, macos-latest]
+                exclude:
+                    - nodejs_version: 18
+                      operating_system: macos-test
+        runs-on: ${{ matrix.operating_system }}
         steps:
         - name: checkout repository
           uses: actions/checkout@v4
 
-        - name: Setup NodeJS Version -18
+        - name: Setup NodeJS Version - ${{ matrix.nodejs_version }}
           uses: actions/setup-node@v3
           with:
-            node-version: 18
+            node-version: ${{ matrix.nodejs_version }}
         
         - name: install Dependencies
           run: npm install
@@ -34,3 +41,35 @@ jobs:
           with:
             name: Mocha-Test-Result
             path: test-results.xml
+
+    code-coverage:
+        name: Code Coverage
+        strategy:
+            matrix:
+                nodejs_version: [18, 19, 20]
+                operating_system: [ubuntu-latest, macos-latest]
+                exclude:
+                    - nodejs_version: 18
+                      operating_system: macos-test
+        runs-on: ${{ matrix.operating_system }}
+        steps:
+        - name: Checkout Repository
+          uses: actions/checkout@v4
+
+        - name: Setup NodeJS version - ${{ matrix.nodejs_version }}
+          uses: actions/setup-node@v3
+          with:
+            node-version: ${{ matrix.nodejs_version }}
+
+        - name: install Dependencies
+          run: npm install
+
+        - name: check code coverage
+          run: npm run coverage
+
+        - name: Archive Test Result
+          uses: actions/upload-artifact@v3
+          with:
+            name: Code-Coverage-Result
+            path: covarage
+            retention-days: 5
