--- a/.github/workflows/solar-system.yml
+++ b/.github/workflows/solar-system.yml
@@ -19,7 +19,7 @@ jobs:
                 operating_system: [ubuntu-latest, macos-latest]
                 exclude:
                     - nodejs_version: 18
-                      operating_system: macos-test
+                      operating_system: macos-latest
         runs-on: ${{ matrix.operating_system }}
         steps:
         - name: checkout repository
@@ -50,7 +50,7 @@ jobs:
                 operating_system: [ubuntu-latest, macos-latest]
                 exclude:
                     - nodejs_version: 18
-                      operating_system: macos-test
+                      operating_system: macos-latest
         runs-on: ${{ matrix.operating_system }}
         steps:
         - name: Checkout Repository
