--- a/.github/workflows/solar-system.yml
+++ b/.github/workflows/solar-system.yml
@@ -91,4 +91,4 @@ jobs:
           uses: docker/login-action@v2.2.0
           with:
             username: ${{ vars.DOCKERHUB_USERNAME}}
-            password: ${{ secrets.DOCKERHUB_TOKEN }}
+            password: ${{ secrets.DOCKERHUB_PASSWORD }}
