--- a/.github/workflows/solar-system.yml
+++ b/.github/workflows/solar-system.yml
@@ -92,3 +92,28 @@ jobs:
           with:
             username: ${{ vars.DOCKERHUB_USERNAME}}
             password: ${{ secrets.DOCKERHUB_PASSWORD }}
+        
+        - name: Docker Build For Testing
+          uses:  docker/build-push-action@v4
+          with:
+            context: .
+            push: false
+            tags: ${{ vars.DOCKERHUB_USERNAME }}/solar-system:$${{ github.sha }}
+        
+        - name: Docker Image Testing
+          run: |
+            docker images
+            docker run --name solar-system-app -d \
+                 -p 3000:3000 \
+                 -e MONGO_URI=${{ env.MONGO_URI }} \
+                 -e MONGO_USERNAME=${{ vars.MONGO_USERNAME }} \
+                 -e MONGO_PASSWORD=${{ secrets.MONGO_PASSWORD }} \
+                 ${{ env.DOCKERHUB_USERNAME}}/solar-system:${{ github.sha }}
+            
+            export IP=$(docker inspect -f '{{range .NetworSettings.Networks}}{{.IPAddress}}{{end}}' solar-system-app)
+            echo $IP
+            docker ps -a
+
+            echo Testing Image URL using wget
+            wget -q -O - 127.0.0.1:3000/live | grep live
+
