--- a/.github/workflows/solar-system.yml
+++ b/.github/workflows/solar-system.yml
@@ -102,7 +102,7 @@ jobs:
         
         - name: Docker Image Testing
           run: |
-            docker images
+            docker images ls
             docker run --name solar-system-app -d \
                  -p 3000:3000 \
                  -e MONGO_URI=${{ env.MONGO_URI }} \
