--- a/.github/workflows/solar-system.yml
+++ b/.github/workflows/solar-system.yml
@@ -102,7 +102,7 @@ jobs:
         
         - name: Docker Image Testing
           run: |
-            docker images ls
+            docker images
             docker run --name solar-system-app -d \
                  -p 3000:3000 \
                  -e MONGO_URI=${{ env.MONGO_URI }} \
@@ -112,7 +112,6 @@ jobs:
             
             export IP=$(docker inspect -f '{{range .NetworSettings.Networks}}{{.IPAddress}}{{end}}' solar-system-app)
             echo $IP
-            docker ps -a
 
             echo Testing Image URL using wget
             wget -q -O - 127.0.0.1:3000/live | grep live
