--- a/.github/workflows/solar-system.yml
+++ b/.github/workflows/solar-system.yml
@@ -102,19 +102,21 @@ jobs:
         
         - name: Docker Image Testing
           run: |
+            echo "_________LIST OF DOCKER IMAGES_____________"
             docker images
+            echo"\n \n _______RUNNING SOLAR-SYSTEM_APP CONATINER______"
             docker run --name solar-system-app -d \
                  -p 3000:3000 \
                  -e MONGO_URI=$MONGO_URI \
                  -e MONGO_USERNAME=$MONGO_USERNAME \
                  -e MONGO_PASSWORD=$MONGO_PASSWORD \
                  ${{ vars.DOCKERHUB_USERNAME}}/solar-system:${{ github.sha }}
-            
+            echo "\n \n____EXPORT THE IP OF THE RUNNING COTAINER____"
             export IP=$(docker inspect -f '{{range .NetworSettings.Networks}}{{.IPAddress}}{{end}}' solar-system-app)
             echo $IP
-
+            echo "\n \n ______LIST OF RUNNING CONTAINERS______"
             docker ps -a
 
-            echo Testing Image URL using wget
+            echo "\n Testing Image URL using wget"
             wget -q -O - 127.0.0.1:3000/live | grep live
     
