--- a/.github/workflows/solar-system.yml
+++ b/.github/workflows/solar-system.yml
@@ -111,12 +111,12 @@ jobs:
                  -e MONGO_USERNAME=$MONGO_USERNAME \
                  -e MONGO_PASSWORD=$MONGO_PASSWORD \
                  ${{ vars.DOCKERHUB_USERNAME}}/solar-system:${{ github.sha }}
-            echo "\n \n____EXPORT THE IP OF THE RUNNING COTAINER____"
+            echo \n \n ____EXPORT THE IP OF THE RUNNING COTAINER____
             export IP=$(docker inspect -f '{{range .NetworSettings.Networks}}{{.IPAddress}}{{end}}' solar-system-app)
             echo $IP
-            echo "\n \n ______LIST OF RUNNING CONTAINERS______"
+            echo \n \n ______LIST OF RUNNING CONTAINERS______
             docker ps -a
 
-            echo "\n Testing Image URL using wget"
+            echo \n Testing Image URL using wget
             wget -q -O - 127.0.0.1:3000/live | grep live
     
