--- a/.github/workflows/solar-system.yml
+++ b/.github/workflows/solar-system.yml
@@ -104,19 +104,19 @@ jobs:
           run: |
             echo "_________LIST OF DOCKER IMAGES_____________"
             docker images
-            echo"\n \n _______RUNNING SOLAR-SYSTEM_APP CONATINER______"
+            echo"_______RUNNING SOLAR-SYSTEM_APP CONATINER______"
             docker run --name solar-system-app -d \
                  -p 3000:3000 \
                  -e MONGO_URI=$MONGO_URI \
                  -e MONGO_USERNAME=$MONGO_USERNAME \
                  -e MONGO_PASSWORD=$MONGO_PASSWORD \
                  ${{ vars.DOCKERHUB_USERNAME}}/solar-system:${{ github.sha }}
-            echo \n \n ____EXPORT THE IP OF THE RUNNING COTAINER____
+            echo "____EXPORT THE IP OF THE RUNNING COTAINER____"
             export IP=$(docker inspect -f '{{range .NetworSettings.Networks}}{{.IPAddress}}{{end}}' solar-system-app)
             echo $IP
-            echo \n \n ______LIST OF RUNNING CONTAINERS______
+            echo "______LIST OF RUNNING CONTAINERS______"
             docker ps -a
 
-            echo \n Testing Image URL using wget
+            echo "Testing Image URL using wget"
             wget -q -O - 127.0.0.1:3000/live | grep live
     
