--- a/.github/workflows/solar-system.yml
+++ b/.github/workflows/solar-system.yml
@@ -114,7 +114,7 @@ jobs:
                  ${{ vars.DOCKERHUB_USERNAME}}/solar-system:${{ github.sha }}
 
             echo "____EXPORT THE IP OF THE RUNNING CONTAINERS____"
-            export IP=$(docker inspect -f '{{range .NetworSettings.Networks}}{{.IPAddress}}{{end}}' solar-system-app)
+            export IP=$(docker inspect -f '{{range .NetworkSettings.Networks}}{{.IPAddress}}{{end}}' solar-system-app)
             echo $IP
             echo "______LIST OF RUNNING CONTAINERS______"
             docker ps -a
