--- a/.github/workflows/solar-system.yml
+++ b/.github/workflows/solar-system.yml
@@ -83,6 +83,9 @@ jobs:
         name: Containerization
         needs: [unit-testing, code-coverage]
         runs-on: ubuntu-latest
+        permissions:
+            packages: write 
+
         steps:
         - name: Checkout Repo
           uses: actions/checkout@v4
@@ -92,13 +95,21 @@ jobs:
           with:
             username: ${{ vars.DOCKERHUB_USERNAME}}
             password: ${{ secrets.DOCKERHUB_PASSWORD }}
+
+        - name: GHCR Login
+          uses: docker/login-action@v2.2.0
+          with:
+            registry: ghcr.io 
+            username: ${{ github.repository_owner }}
+            password: ${{ secrets.GITHUB_TOKEN }}
         
         - name: Docker Build For Testing
           uses:  docker/build-push-action@v4
           with:
             context: .
             push: false
-            tags: ${{ vars.DOCKERHUB_USERNAME }}/solar-system:${{ github.sha }}
+            tags: |
+              ${{ vars.DOCKERHUB_USERNAME }}/solar-system:${{ github.sha }}
         
         - name: Docker Image Testing
           run: |
@@ -122,9 +133,11 @@ jobs:
             echo "Testing Image URL using wget"
             wget -q -O - 127.0.0.1:3000/live | grep live
     
-        - name: Docker Push
+        - name: Container Registry Push
           uses:  docker/build-push-action@v4
           with:
             context: .
             push: true
-            tags: ${{ vars.DOCKERHUB_USERNAME }}/solar-system:${{ github.sha }}
+            tags: |
+               ${{ vars.DOCKERHUB_USERNAME }}/solar-system:${{ github.sha }}
+               ghcr.io/${{ github.repository_owner }}/solar-system:${{ github.sha }}
