added github registry and publish steps

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Solar System",
+  "name": "@kev-skywalker/solar-system", #in order to publish packages on Github Packges
   "version": "6.7.6",
   "author": "Siddharth Barahalikar <barahalikar.siddharth@gmail.com>",
   "homepage": "https://www.linkedin.com/in/barahalikar-siddharth/",
