--- a/.github/workflows/solar-system.yml
+++ b/.github/workflows/solar-system.yml
@@ -84,7 +84,7 @@ jobs:
         needs: [unit-testing, code-coverage]
         runs-on: ubuntu-latest
         permissions:
-            packages: write 
+            packages: write #grant permission to github token for pushing and publishing packages to github container registry
 
         steps:
         - name: Checkout Repo
