--- a/.github/workflows/publish-package.yml
+++ b/.github/workflows/publish-package.yml
@@ -15,7 +15,7 @@ jobs:
               uses: actions/checkout@v4
             # Setup .npmrc file to publish to Github Packages
             - name: Setup Node.js Version - 20.x
-              uses: actions.setup-node@v4
+              uses: actions/setup-node@v4
               with:
                 node-version: '20.x'
                 registry-url: 'https://npm.pkg.github'
