--- a/.github/workflows/publish-package.yml
+++ b/.github/workflows/publish-package.yml
@@ -3,6 +3,7 @@ name: Publish Package
 on:
   release:
     types: published
+  workflow_dispatch:
 
 jobs:
     test-publish-package:
@@ -14,7 +15,7 @@ jobs:
             - name: Checkout Repository
               uses: actions/checkout@v4
             # Setup .npmrc file to publish to Github Packages
-            
+
             - name: Setup Node.js Version - 20.x
               uses: actions/setup-node@v4
               with:
