--- a/.github/workflows/publish-package.yml
+++ b/.github/workflows/publish-package.yml
@@ -19,7 +19,7 @@ jobs:
           uses: actions/setup-node@v4
           with:
             node-version: '20.x'
-            registry-url: 'https://npm.pkg.github'
+            registry-url: 'https://npm.pkg.github.com'
             # Defaults to the user or oranization that owns the workflow file
             #scope: '@kev-skywalker'
 
