--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@kev-skywalker/solar-system",
-  "version": "6.7.6"
+  "version": "6.7.6",
   "author": "Siddharth Barahalikar <barahalikar.siddharth@gmail.com>",
   "homepage": "https://www.linkedin.com/in/barahalikar-siddharth/",
   "license": "MIT",
