--- a/.github/workflows/solar-system.yml
+++ b/.github/workflows/solar-system.yml
@@ -27,7 +27,7 @@ jobs:
         strategy:
             matrix:
                 nodejs_version: [18, 20]
-                operating_system: [ubuntu-latest, macos-latest]
+                operating_system: [ubuntu-latest]
                 exclude:
                     - nodejs_version: 18
                       operating_system: macos-latest
@@ -66,15 +66,35 @@ jobs:
 
     code-coverage:
         name: Code Coverage
+        #if we use container job, we no longer need actions/setup-node@v3. the container job already contains the necessaries
+        container:
+            image: node:18
+        services:
+          mongo-db:
+            image: siddharth67/mongo-db:non-prod
+            #no need to map any port with the bridge network's user-defined
+            #options to modify the hostname
+            options:
+              --name mongo
+        env:
+          MONGO_URI: 'mongodb://mongo:27017/superData' 
+          MONGO_USERNAME: non-prod-user
+          MONGO_PASSWORD: non-prod-password
+            
         runs-on: ubuntu-latest
         steps:
         - name: Checkout Repository
           uses: actions/checkout@v4
 
-        - name: Setup NodeJS version - 18
-          uses: actions/setup-node@v3
+        # - name: Setup NodeJS version - 18
+        #  uses: actions/setup-node@v3
+        #  with:
+        #    node-version: 18
+        - name: Cache NPM dependencies
+          uses: actions/cache@v3
           with:
-            node-version: 18
+            path: ~/.npm
+            key: ${{ runner.os }}-node-module-${{ hashFiles('package-lock.json') }}
 
         - name: install Dependencies
           run: npm install
