--- a/.github/workflows/solar-system.yml
+++ b/.github/workflows/solar-system.yml
@@ -172,3 +172,23 @@ jobs:
             tags: |
                ${{ vars.DOCKERHUB_USERNAME }}/solar-system:${{ github.sha }}
                ghcr.io/${{ github.repository_owner }}/solar-system:${{ github.sha }}
+
+    dev-deploy:
+          name: Deployment on dev environment
+          needs: docker
+          runs-on: ubuntu-latest
+          steps:
+            - name: checkout Repo
+              uses: actions/checkout@v4
+
+            - name: Install kubectl CLI
+              uses: azure/setup-kubectl@v3
+              with:
+                version: 'v1.26.0'
+
+            - name: Fetch Kubernetes cluster Details
+              run: |
+                 kubectl version
+                 echo ---------------------
+                 kubectl get nodes
+
