--- a/.github/workflows/solar-system.yml
+++ b/.github/workflows/solar-system.yml
@@ -174,9 +174,20 @@ jobs:
                ghcr.io/${{ github.repository_owner }}/solar-system:${{ github.sha }}
 
     dev-deploy:
+          #this job will only run the current branch contains "feature/"
+          if: contains(github.ref, 'feature/')
           name: Deployment on dev environment
           needs: docker
+          #these envorinment option will ensure to pass all protection rules before starting the jobs
+          environment:
+            name: development
+            #copied from job outputs layer in order to easily get it
+            url: https://${{ steps.step-set_ingress_host_url.outputs.APP_INGRESS_HOST }}
+
           runs-on: ubuntu-latest
+          # Map a step output to a job output
+          outputs:
+              APP_INGRESS_HOST: ${{ steps.step-set_ingress_host_url.outputs.APP_INGRESS_HOST }}
           steps:
             - name: checkout Repo
               uses: actions/checkout@v4
@@ -186,9 +197,174 @@ jobs:
               with:
                 version: 'v1.26.0'
 
+            - name: set Kubeconfig
+              uses: azure/k8s-set-context@v3
+              with:
+                method: kubeconfig
+                kubeconfig: ${{ secrets.KUBECONFIG }}
+
             - name: Fetch Kubernetes cluster Details
               run: |
-                 kubectl version
+                 kubectl version --short
                  echo ---------------------
                  kubectl get nodes
+            
+            - name: save Nginx Ingress Controller IP as a GITHUB Environment Variable
+              #any declared variable in this step will not be available for the current step all subsequent steps in a job will have access
+              run: |
+                echo "INGRESS_IP=$(kubectl -n ingress-nginx get services ingress-nginx-controller -o jspath=".status.loadbalancer.ingress[0].ip") >> "$GITHUB_ENV"
+            
+        
+            - name: Replace Token in Manifest File
+              uses: cschleiden/replace-tokens@v1
+              with:
+                tokenPrefix: '${'
+                tokenSuffix: '}'
+                files: '["kubernetes/development/*.yaml"]'
+              env:
+                NAMESPACE: ${{ vars.NAMESPACE }}
+                REPLICAS:  ${{ vars.REPLICAS }}
+                IMAGE: ${{ vars.DOCKERHUB_USERNAME }}/solar-system:${{ github.sha }}
+                #use the declared variable in the $GITHUB_ENV
+                INGRESS_IP: ${{ env.INGRESS_IP }}
 
+            - name: Check Files
+              run: |
+                cat kubernetes/development/*.yaml
+
+            - name: Create and check MongoDB Secret
+              run: |
+                echo --------create MongoDB Secret---------
+                kubectl -n ${{ vars.NAMESPACE }} create secret mongo-db-creds \
+                --from-literal=MONGO_URI=${{ env.MONGO_URI }} \
+                --from-literal=MONGO_USERNAME=${{ vars.MONGO_USERNAME }} \
+                --from-literal=MONGO_PASSWORD=${{ secrets.MONGO_PASSWORD }} \
+                --save-config \
+                --dry-run=client \
+                -o yaml | kubectl apply -f -
+                echo --------check MongoDB secret-----------
+                kubectl -n ${{ vars.NAMESPACE }} get secrets
+
+            - name: Deploy to DEV Env and check and Verify
+              run: |
+                kubectl apply -f kubernetes/development
+                echo ------ get all infos about deploy ----------
+                kubectl -n ${{ vars.NAMESPACE }} get all
+
+            - name: Set App Ingress Host URL
+              id: step-set_ingress_host_url
+              run: |
+                echo "APP_INGRESS_HOST=$(kubectl -n ${{ vars.NAMESPACE }} get ingress -o jsonpath="(.items[0].spec.tls[0].hosts[0])")" >> "$GITHUB_OUTPUT"
+    
+    dev-integration-testing:
+        #this job will only run the current branch contains "feature/"
+        if: contains(github.ref, 'feature/')
+        name: Dev Integration Testing
+        needs: dev-deploy
+        runs-on: ubuntu-latest
+        steps:
+          - name: Test URL Output using CURL and JQ
+            env:
+              URL: ${{ needs.dev-deploy.outputs.APP_INGRESS_HOST }}
+            run: |
+              echo ${URL}
+              echo "----------------------------"
+              curl https://${URL}/live -s -k | jq -r .status | grep -i live # -k option to ignore the certificate
+
+    prod-deploy:
+          if: github.ref == 'refs/head/main'
+          name: Deployment on prod environment
+          needs: docker
+          #these envorinment option will ensure to pass all protection rules before starting the jobs
+          environment:
+            name: production
+            #copied from job outputs layer in order to easily get it
+            url: https://${{ steps.step-set_ingress_host_url.outputs.APP_INGRESS_HOST }}
+
+          runs-on: ubuntu-latest
+          # Map a step output to a job output
+          outputs:
+              APP_INGRESS_HOST: ${{ steps.step-set_ingress_host_url.outputs.APP_INGRESS_HOST }}
+          steps:
+            - name: checkout Repo
+              uses: actions/checkout@v4
+
+            - name: Install kubectl CLI
+              uses: azure/setup-kubectl@v3
+              with:
+                version: 'v1.26.0'
+
+            - name: set Kubeconfig
+              uses: azure/k8s-set-context@v3
+              with:
+                method: kubeconfig
+                kubeconfig: ${{ secrets.KUBECONFIG }}
+
+            - name: Fetch Kubernetes cluster Details
+              run: |
+                 kubectl version --short
+                 echo ---------------------
+                 kubectl get nodes
+            
+            - name: save Nginx Ingress Controller IP as a GITHUB Environment Variable
+              #any declared variable in this step will not be available for the current step all subsequent steps in a job will have access
+              run: |
+                echo "INGRESS_IP=$(kubectl -n ingress-nginx get services ingress-nginx-controller -o jspath=".status.loadbalancer.ingress[0].ip") >> "$GITHUB_ENV"
+            
+        
+            - name: Replace Token in Manifest File
+              uses: cschleiden/replace-tokens@v1
+              with:
+                tokenPrefix: '${'
+                tokenSuffix: '}'
+                files: '["kubernetes/production/*.yaml"]'
+              env:
+                NAMESPACE: ${{ vars.NAMESPACE }}
+                REPLICAS:  ${{ vars.REPLICAS }}
+                IMAGE: ${{ vars.DOCKERHUB_USERNAME }}/solar-system:${{ github.sha }}
+                #use the declared variable in the $GITHUB_ENV
+                INGRESS_IP: ${{ env.INGRESS_IP }}
+
+            - name: Check Files
+              run: |
+                cat kubernetes/development/*.yaml
+
+            - name: Create and check MongoDB Secret
+              run: |
+                echo --------create MongoDB Secret---------
+                kubectl -n ${{ vars.NAMESPACE }} create secret mongo-db-creds \
+                --from-literal=MONGO_URI=${{ env.MONGO_URI }} \
+                --from-literal=MONGO_USERNAME=${{ vars.MONGO_USERNAME }} \
+                --from-literal=MONGO_PASSWORD=${{ secrets.MONGO_PASSWORD }} \
+                --save-config \
+                --dry-run=client \
+                -o yaml | kubectl apply -f -
+                echo --------check MongoDB secret-----------
+                kubectl -n ${{ vars.NAMESPACE }} get secrets
+
+            - name: Deploy to PROD Env and check and Verify
+              run: |
+                kubectl apply -f kubernetes/production
+                echo ------ get all infos about deploy ----------
+                kubectl -n ${{ vars.NAMESPACE }} get all
+
+            - name: Set App Ingress Host URL
+              id: step-set_ingress_host_url
+              run: |
+                echo "APP_INGRESS_HOST=$(kubectl -n ${{ vars.NAMESPACE }} get ingress -o jsonpath="(.items[0].spec.tls[0].hosts[0])")" >> "$GITHUB_OUTPUT"
+    
+    prod-integration-testing:
+        if: github.ref == 'refs/head/main'
+        name: Prod Integration Testing
+        needs: prod-deploy
+        runs-on: ubuntu-latest
+        steps:
+          - name: Test URL Output using CURL and JQ
+            env:
+              URL: ${{ needs.prod-deploy.outputs.APP_INGRESS_HOST }}
+            run: |
+              echo ${URL}
+              echo "----------------------------"
+              curl https://${URL}/live -s -k | jq -r .status | grep -i live # -k option to ignore the certificate   
+
+              
