--- a/.github/workflows/solar-system.yml
+++ b/.github/workflows/solar-system.yml
@@ -178,7 +178,7 @@ jobs:
           if: contains(github.ref, 'feature/')
           name: Deployment on dev environment
           needs: docker
-          uses: kev-skywalker/solar-system/.github/workflows/reuse-deployment.yml
+          uses: .github/workflows/reuse-deployment.yml
 
     dev-integration-testing:
         #this job will only run the current branch contains "feature/"
@@ -199,7 +199,7 @@ jobs:
           if: github.ref == 'refs/head/main'
           name: Deployment on prod environment
           needs: docker
-          uses: kev-skywalker/solar-system/.github/workflows/reuse-deployment.yml
+          uses: .github/workflows/reuse-deployment.yml
     
     prod-integration-testing:
         if: github.ref == 'refs/head/main'
