--- a/.github/workflows/reuse-deployment.yml
+++ b/.github/workflows/reuse-deployment.yml
@@ -2,6 +2,13 @@ name: Deployment - Reusable Workflow
 
 on:
     workflow_call:
+      secrets:
+        k8s-kubeconfig:
+          required: true
+        mongodb-password:
+          required: true
+
+      
 
 
 jobs:
@@ -28,7 +35,7 @@ jobs:
           uses: azure/k8s-set-context@v3
           with:
             method: kubeconfig
-            kubeconfig: ${{ secrets.KUBECONFIG }}
+            kubeconfig: ${{ secrets.k8s-kubeconfig }}
 
         - name: Fetch Kubernetes cluster Details
           run: |
@@ -65,7 +72,7 @@ jobs:
             kubectl -n ${{ vars.NAMESPACE }} create secret mongo-db-creds \
             --from-literal=MONGO_URI=${{ env.MONGO_URI }} \
             --from-literal=MONGO_USERNAME=${{ vars.MONGO_USERNAME }} \
-            --from-literal=MONGO_PASSWORD=${{ secrets.MONGO_PASSWORD }} \
+            --from-literal=MONGO_PASSWORD=${{ secrets.mongodb-password }} \
             --save-config \
             --dry-run=client \
             -o yaml | kubectl apply -f -
