--- a/.github/workflows/solar-system.yml
+++ b/.github/workflows/solar-system.yml
@@ -61,7 +61,7 @@ jobs:
           if: always()
           uses: actions/upload-artifact@v3
           with:
-            name: Mocha-Test-Result
+            name: Mocha-Coverage-Result
             path: test-results.xml
 
     code-coverage:
